workspace/log/build_2020-08-20_14-18-41/turtlebot3_navigation/stdout_stderr.log
running egg_info
writing /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/PKG-INFO
writing dependency_links to /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/dependency_links.txt
writing entry points to /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/entry_points.txt
writing requirements to /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/requires.txt
writing top-level names to /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/top_level.txt
reading manifest file '/home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/SOURCES.txt'
writing manifest file '/home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info/SOURCES.txt'
running build
running build_py
copying turtlebot3_navigation/navigation_node.py -> /home/gustavo/workspace/build/turtlebot3_navigation/build/lib/turtlebot3_navigation
running install
running install_lib
copying /home/gustavo/workspace/build/turtlebot3_navigation/build/lib/turtlebot3_navigation/navigation_node.py -> /home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation
byte-compiling /home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation/navigation_node.py to navigation_node.cpython-38.pyc
  File "/home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation/navigation_node.py", line 26
    def main(args=None):
    ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation-0.0.0-py3.8.egg-info' (and everything under it)
Copying /home/gustavo/workspace/build/turtlebot3_navigation/turtlebot3_navigation.egg-info to /home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation-0.0.0-py3.8.egg-info
running install_scripts
Installing navigation_node script to /home/gustavo/workspace/install/turtlebot3_navigation/lib/turtlebot3_navigation
writing list of installed files to '/home/gustavo/workspace/build/turtlebot3_navigation/install.log'
